fix timeline width, checkbox visible on wrong view (profile list v2)

--- a/profile-list/wanted-list.css
+++ b/profile-list/wanted-list.css
@@ -36,8 +36,12 @@ p {
 	visibility: hidden;
 }
 
+#marriedCouple:hover #isMarried {
+	visibility: visible;
+}
+
 #timeline {
-	width: 100%;
+	/*width: 100%;*/
 	height: 110px;
 	overflow-x: auto;
 	overflow-y: hidden;
@@ -94,7 +98,7 @@ p {
 }
 
 .material-icons {
-	font-size: 30px !important;
+	font-size: 36px !important;
 }
 
 
